--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<header id="main_navigation" class="clearfix">
-	<div class = "title">
-		<a href="index.html" class="name">dry/Goggle/</a>
+		<div class = "title">
+		<%= link_to "dry/Goggle/", root_path, class: "name" %>
 		<p class="namejap">ドライゴーグル</p>
 	</div>
 	<nav>
@@ -23,6 +23,10 @@
 	</header>
 
 <%= yield %>
+
+<footer id="mp_footer" class="clearfix">
+	<p class = "copyright">&copy;2016 Simon Lacis</p>
+</footer>
 
 </body>
 </html>
