--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 			<hr>
 		</header>
 	<div id="content">
-		<%= @post.content %>
+		<%= markdown @post.content %>
 	</div>
 	
 	<hr>
@@ -23,5 +23,5 @@
 	<hr>
 	</div>
 
-<!-- <%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %> -->
+<%= link_to "Edit", edit_post_path(@post) %>
+<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
