allow heroku to use https for fonts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,5 @@
 @import 'normalize';
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+@import url(//fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
 $dark: #6a6666;
 $light: #d8d7d7;
