--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Hello world cunt</h1>
+
+	<h1 id="page_title">Articles</h1>	
+	<div id ="posts_wrapper" class="skinny_wrapper">
+	<% @posts.each do |post| %>
+		<div class ="post">
+			<p class="date"><%= post.created_at.strftime('%A, %b %d') %></p>
+			<h2><a href="#"><%= link_to post.title, post %></a></h2>
+			<hr>
+		</div>
+	<% end %>
+
+<%= will_paginate @posts %>
+	</div>
