added review functionality

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -154,6 +154,18 @@ textarea {
 			color: $highlight;
 	}
 }
+
+.review_button {
+	background: $highlight;
+	color: $white;
+	text-decoration: none;
+	padding: 1em 2em;
+}
+
+.button_wrapper {
+	margin: 4em 0 0 0;
+	text-align: center;
+}
 #page_title {
 	/*font-weight: 400;*/
 	text-align: center;
