--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	</div>
 	<nav>
 	<%= link_to "Articles", posts_path %>
-	<a href="#">Reviews</a>
+	<%= link_to "Reviews", reviews_path %>
 	<a href="contact.html">Contact</a>
 	</nav>
 
