--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @post do |f| %>
  <% if @post.errors.any? %>
- 	<h2><%= pluralize(@post.errors.count, "error") %> prevented this ost from saving: </h2>
+ 	<h2><%= pluralize(@post.errors.count, "error") %> prevented this post from saving: </h2>
  	<ul>
  		<% @post.errors.full_messages.each do |msg| %>
  			<li><%= msg %></li>
