--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -17,13 +17,10 @@
 		<div class="col-3 hp_content">
 			<h2>Reviews</h2>
 			<hr>
-			<h3><a href="#">Placeholder One</a></h3>
-			<p class="date">2016/5/22</p>
-			<h3>Placeholder Two</h3>
-			<p class="date">2016/5/22</p>
-			<h3>Placeholder Three</h3>
-			<p class="date">2016/5/22</p>
-
+			<% @reviews.each do |review| %>
+			<h3><a href="%"><%= link_to review.title, review %></h3>
+			<p class="date"><%= review.created_at.strftime("%A, %b, %d") %></p>
+			<% end %>
 		</div>
 		
 	</div>
