--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -13,4 +13,8 @@
 			<a href="<%= @review.link %>" class ="review_button" target="_blank"> More Information</a>
 			</div>
 		</div>
+
+		<%= link_to "Edit", edit_review_path(@review) %>
+		<%= link_to "Delete", review_path(@review), method: :delete, data: { confirm: "Are you sure you want to delete this review?"}%>
+
 	</div>
