--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,5 +1,5 @@
 <h1 id="page_title">Contact me</h1>
-
-<div class="skinny_wrapper wrapper_padding">
+<meta HTTP-EQUIV="REFRESH" content="2; url=/">
+<div id = "page_title" class="skinny_wrapper wrapper_padding">
 	<h1>Message sent successfully.</h1>
 </div>
