--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<nav>
 	<%= link_to "Articles", posts_path %>
 	<%= link_to "Reviews", reviews_path %>
-	<a href="contact.html">Contact</a>
+	<%= link_to "Contact", new_contact_path %>
 	</nav>
 
 	</header>
