added new stylings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
 		<p class="namejap">ドライゴーグル</p>
 	</div>
 	<nav>
-	<%= link_to "Articles", posts_path %>
-	<%= link_to "Reviews", reviews_path %>
-	<%= link_to "Contact", new_contact_path %>
+	<%= link_to "ARTICLES", posts_path %>
+	<%= link_to "REVIEWS", reviews_path %>
+	<%= link_to "CONTACT", new_contact_path %>
 	</nav>
 
 	</header>
