--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -3,12 +3,13 @@
 }
 
 .col-1 {
-	width: 45%;
-	padding: 2em 5% 0 2.5%;
+	width: 40%;
+	padding: 2em 10% 0 2.5%;
+		margin-right:6em;
 }
 
 .col-2, .col-3 {
-	width: 27.5%;
+	width: 25%;
 	padding: 2em 2.5%;
 }
 
@@ -21,6 +22,7 @@
 		font-size: 1.35em;
 		font-weight: 400;
 		margin-bottom: .5em;
+		text-transform: uppercase;
 	}
 	a{
 		text-decoration: none;
