--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -5,12 +5,12 @@
 .col-1 {
 	width: 40%;
 	padding: 2em 10% 0 2.5%;
-		margin-right:6em;
+		/*margin-right:1em;*/
 }
 
 .col-2, .col-3 {
-	width: 25%;
-	padding: 2em 2.5%;
+	width: 30%;
+	padding: 2em 0;
 }
 
 .hp_content {
@@ -21,7 +21,7 @@
 	h3 {
 		font-size: 1.35em;
 		font-weight: 400;
-		margin-bottom: .5em;
+		margin-bottom: .2em;
 		text-transform: uppercase;
 	}
 	a{
@@ -39,6 +39,7 @@
 	}
 	p {
 		margin: 0 0 0.75em 0;
+		line-height: 2.5;
 	}
 
 }
