--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import 'normalize';
 @import url(//fonts.googleapis.com/earlyaccess/notosansjapanese.css);
-@import url(//mplus-fonts.sourceforge.jp/webfonts/basic_latin/mplus_webfonts.css);
+@import url(//mplus-fonts.osdn.jp/webfonts/basic_latin/mplus_webfonts.css);
 
 $dark: #6a6666;
 $light: #d8d7d7;
