--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,8 @@ body {
 	/*font-family: 'M+ P Type-1 (basic latin) Black';*/
 	/*font-family: 'Noto Sans Japanese', serif;*/
 	font-family: 'M+ P Type-1 (basic latin) Regular', serif;
+	background-image: image-url('bgimage.png');
+	background-repeat: repeat;
 }
 
 * {
@@ -106,7 +108,8 @@ hr {
 
 #main_navigation {
 	padding: 1.5em 5% 0em;
-	background-image: image-url('headerbglight.png');
+	background-color: white;
+	background-image: image-url('headerbgnew.png');
 	background-repeat: repeat;
 	border-bottom: 1px solid $light;
 	.title {
@@ -114,7 +117,7 @@ hr {
 	}
 	.name {
 	font-family: 'Noto Sans Japanese', serif;
-	font-weight: 100;
+	font-weight: 200;
 	font-size: 2.5em;
 	padding: 0 1rem;
 	text-decoration: none;
@@ -136,7 +139,7 @@ hr {
 			font-weight: 500;
 			text-decoration: none;
 			margin: 0 1.3rem;
-			font-size: 1.2rem;
+			font-size: 1.4rem;
 			color: $dark;
 					&:hover {
 			color: $highlight;
@@ -193,12 +196,13 @@ textarea {
 	padding: 3em 0;
 	font-size: 1rem;
 	text-transform: uppercase;
+	background-color: white;
 
 }
 
 #mp_footer {
 	border-top: 1px solid $light;
-	background-image: image-url('headerbglight.png');
+	background-image: image-url('headerbgnew.png');
 	background-repeat: repeat;
 	.copyright {
 		padding: 2.5em 7%;
