--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -4,6 +4,8 @@
 			<hr>
 			<p>If one is living in a foreign land, one must adapt in order to survive.</p>
 			<p>In a land where vegetarians are far and few, one must seek knowledge for a more 'fruitful' experience. That knowledge lies here.</p>
+			<br>
+			<%= image_tag("d.jpg", size: "100x100") %>
 
 		</div>
 		<div class="col-2 hp_content">
