--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -10,12 +10,12 @@
 
 .col-2, .col-3 {
 	width: 30%;
-	padding: 2em 0;
+	padding: 2em 2%;
 }
 
 .hp_content {
 	h2 {
-		font-size: 1rem;
+		font-size: 1.2rem;
 		text-transform: uppercase;
 	}
 	h3 {
@@ -32,9 +32,9 @@
 		}
 	}
 	.date {
-		font-size: 0.85em;
+		font-size: 1em;
 		margin-bottom: 3em;
-		color: $light;
+		color: black;
 		text-align: center;
 	}
 	p {
