--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -193,9 +193,10 @@ textarea {
 	text-align: center;
 	border-bottom: 1px solid $light;
 	padding: 3em 0;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	text-transform: uppercase;
-	background-color: white;
+	background-image: image-url('headerbgnew.png');
+	background-repeat: repeat;
 
 }
 
