--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <h1 id="page_title"> Contact me</h1>
 
-<div class ="skinny_wrapper wrapper_padding">
+<div class ="skinny_wrapper wrapper_padding, contactform">
 	<%= form_for @contact do |f| %>
 	<%= f.label :name %><br>
 	<%= f.text_field :name, required: true %>
