--- a/app/assets/stylesheets/_articlereview.css.scss
+++ b/app/assets/stylesheets/_articlereview.css.scss
@@ -45,8 +45,17 @@
 		}
 }
 
+#content {
+	background-image: image-url('headerbgnew.png');
+	background-repeat: repeat;
+	padding: 2em;
+}
+
 #share_box {
+	padding: 1px;
 	text-align: center;
+	background-image: image-url('headerbgnew.png');
+	background-repeat: repeat;
 	p {
 		padding: 0 0 1em 0;
 		margin: 0;
