--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -20,12 +20,13 @@
 	h2 {
 		font-size: 1.2rem;
 		text-transform: uppercase;
+		color: black;
 	}
 	h3 {
 		font-size: 1.35em;
 		font-weight: 400;
 		margin-bottom: .2em;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 	}
 	a{
 		text-decoration: none;
