Added devise authentification

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -120,7 +120,7 @@ hr {
 	font-size: 2.5em;
 	padding: 0 1rem;
 	text-decoration: none;
-	color: $dark;
+	color: black;
 	}
 	.namejap {
 	font-family: 'Noto Sans Japanese', serif;
@@ -128,7 +128,7 @@ hr {
 	font-size: 1.5em;
 	padding: 0em 3rem;
 	text-decoration: none;
-	color: $dark;
+	color: black;
 /*	float: left;*/
 	}
 	nav {
