--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
 	</nav>
 
 	</header>
+<% if notice %>
+<p class="notice"><%= notice %></p>
+<% elsif alert %>
+<p class="alert"><%= alert %></p>
+<% end %>
 
 <%= yield %>
 
