Styled authentification pages

--- a/app/assets/stylesheets/_articlereview.css.scss
+++ b/app/assets/stylesheets/_articlereview.css.scss
@@ -73,6 +73,21 @@
 		}
 	}
 }
+
+#admin_links {
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	text-align: center;
+	padding: 1em 0;
+	margin: 3em 0;
+	a {
+		color: $dark;
+		margin: 0 1em;
+		text-transform: uppercase;
+		font-weight: 600;
+		font-size:  .8em;
+	}
+}
 // --------Pagination
 
 .pagination:before,
