--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,6 +60,13 @@ body {
 	display: none;
 }
 
+.notice, .alert {
+	text-align: center;
+	padding: 1em;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
 h1, h2, h3, h4, h5, h6, p, ul, li {
 	color: $dark;
 }
