--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Forgot your password?</h2>
+<h1 id="page_title">Forgot your password?</h1>
+<div class="skinny_wrapper wrapper_padding">
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -12,5 +13,6 @@
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
