--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,4 @@
+<h1 id="page_title">Edit Article</h1>
 <div class="skinny_wrapper wrapper_padding">
-
-<h1>Edit Post</h1>
-
-<%= render 'form' %>
+	<%= render 'form' %>
 </div>
