--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,12 @@
 		<%= markdown @post.content %>
 	</div>
 	
-
+	<% if user_signed_in? %>
+		<div id ="admin_links">
+		<%= link_to "Edit Article", edit_post_path(@post) %>
+		<%= link_to "Delete Article", post_path(@post), method: :delete, data: { confirm: "Are you sure?"} %>
+		<% end %>
+		</div>
 	<div id="share_box">
 
 	<hr>
@@ -25,6 +30,3 @@
 
 	<%= render 'disqus' %>
 	</div>
-
-<%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
